--- a/Grocery/src/app/tab1/tab1.page.html
+++ b/Grocery/src/app/tab1/tab1.page.html
@@ -83,7 +83,7 @@
     </ion-item> -->
 
 
-  <ion-fab top right>
+  <ion-fab bottom right>
     <ion-button (click)="addItem()" ion-fab>
       <ion-icon name="add"></ion-icon>
     </ion-button>
